Fix side panel invisible overlay shadowing buttons.

--- a/resources/private/common-html/sass/views/_side_panel.scss
+++ b/resources/private/common-html/sass/views/_side_panel.scss
@@ -23,7 +23,6 @@
   position: fixed;
   right: -500px;
   top: 60px;
-  bottom: 0px;
 
   .comment-controls {
     margin-left: 0;
